--- a/templates/dbca.rsp.12.2.j2
+++ b/templates/dbca.rsp.12.2.j2
@@ -2,6 +2,12 @@ responseFileVersion=/oracle/assistants/rspfmt_dbca_response_schema_v12.2.0
 gdbName={{oracledb.db_name}}.{{oracledb.db_domain}}
 sid={{oracledb.sid}}
 databaseConfigType=SI
+{% if oracledb.datafile_destination != 'default' %}
+datafileDestination={{oracledb.datafile_destination}}/
+{% endif %}
+{% if oracledb.recovery_destination != 'default' %}
+recoveryAreaDestination={{oracledb.recovery_destination}}/
+{% endif %}
 templateName={{oracledb.template_dir}}/{{oracledb.db_template}}
 sysPassword={{oracledb.db_pass}}
 systemPassword={{oracledb.db_pass}}
@@ -9,5 +15,6 @@ storageType={{oracledb.db_storage_type}}
 characterSet=AL32UTF8
 nationalCharacterSet=AL16UTF16
 initParams={% for param in oracledb.instance_params -%}{{ param.name }}={{param.value}},{%- endfor %}
+
 --
 
