--- a/templates/oracledb.systemd.j2
+++ b/templates/oracledb.systemd.j2
@@ -1,14 +1,24 @@
 [Unit]
-Description=Oracle databases daemon
-After=network.target
+Description=The Oracle Database Service
+After=syslog.target network.target
 
 [Service]
-Type=forking
-EnvironmentFile=/etc/sysconfig/env.{{oracledb.sid}}
-TimeoutSec={{ db_startup_timeout }}
-ExecStart={{ oracle_home }}/bin/dbstart {{ oracle_home }}
-ExecStop={{ oracle_home }}/bin/dbshut {{ oracle_home }}
+LimitMEMLOCK=infinity
+LimitNOFILE=65535
+
+Type=oneshot
+RemainAfterExit=yes
 User={{oracledb.user}}
+Group={{oracledb.group}}
+Restart=no
+
+ExecStart=/usr/bin/echo 'Starting Oracle Databases with Y in /etc/oratab for {{oracle_home}}'
+ExecStart={{oracle_home}}/bin/dbstart {{oracle_home}}
+ExecStart=/usr/bin/echo 'dbstart has completed'
+
+ExecStop=/usr/bin/echo 'Stopping Oracle Databases'
+ExecStop={{oracle_home}}/bin/dbshut {{oracle_home}}
+ExecStop=/usr/bin/echo 'dbshut has completed'
 
 [Install]
 WantedBy=multi-user.target
